# internal/user/models/user.go
@@ -7,6 +7,7 @@ import (
 	"gorm.io/gorm"
 )
 
+// User Is The Main User Model :
 type User struct {
 	ID          uuid.UUID `json:"id" gorm:"type:uuid;primaryKey"`
 	Name        string    `json:"name" gorm:"not null;size:255"`
@@ -17,6 +18,7 @@ type User struct {
 	UpdatedAt   time.Time `json:"updated_at"`
 }
 
+// Before Create Ensures UUID Is Set Automatically :
 func (u *User) BeforeCreate(tx *gorm.DB) (err error) {
 
 	if u.ID == uuid.Nil {
@@ -25,15 +27,4 @@ func (u *User) BeforeCreate(tx *gorm.DB) (err error) {
 	}
 
 	return nil
-}
-
-// Group Is A Bookkeeping Table That Uses Row-Level Locks To Safely Distribute Capacity.
-type Group struct {
-	Name        string `gorm:"primaryKey;size:64"`
-	Base        string `gorm:"not null;index;size:32"` // child | teen | adult | senior
-	Index       int    `gorm:"not null;index"`         // 1,2,3
-	Capacity    int    `gorm:"not null;default:3"`
-	MemberCount int    `gorm:"not null;default:0"`
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
 }
